<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Lotto Money</string>
    <string name="app_name_part_one">Mega</string>
    <string name="app_name_part_two">Lotto</string>
    <string name="assist">Assist</string>
    <string name="assist_logo">Paytm Logo</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="card_content_descriptor">card</string>
    <string name="dismiss_button_content_description">Dismiss</string>
    <string name="do_not_send_otp">I will Use IPIN</string>
    <string name="dummy">Redirecting you to payment page.</string>
    <string name="easypay_config_endpoint01">http://sachin.webscript.io/sachin</string>
    <string name="easypay_error_endpoint">https://easypay.paytm.com/paytmAnalytics/logerror</string>
    <string name="easypay_hide_password">Hide Password</string>
    <string name="easypay_logevent_endpoint">https://easypay.paytm.com/paytmAnalytics/logevent</string>
    <string name="easypay_password">Password</string>
    <string name="easypay_show_password">Show Password</string>
    <string name="easypay_submit">SUBMIT</string>
    <string name="enter_one_time_password">Enter One Time Password (OTP)</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="fast_and_secure">Fast &amp; Secure Payments</string>
    <string name="flutterwave">Flutterwave</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide">Hide</string>
    <string name="logout">Logout</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_history">History</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_ticket">My Tickets</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_refer_earn">Refer &amp; Earn</string>
    <string name="menu_report_an_issue">Report an issue</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_support">Chat Support</string>
    <string name="menu_terms">Terms &amp; Conditions</string>
    <string name="menu_wallet">Wallet</string>
    <string name="message_detected">OTP detected, press submit to continue</string>
    <string name="message_not_detected">Message not detected, please enter OTP Manually</string>
    <string name="modal_content_descriptor">modal</string>
    <string name="modal_inner_content_descriptor">modal inner</string>
    <string name="native_please_do_not">Please wait do not press \'Back\' button \n</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no_result_found">Results not found</string>
    <string name="number_correct">Number is correct! Send Otp</string>
    <string name="number_incorrect">Details Do not match</string>
    <string name="order_cancel">Cancel payment!!!</string>
    <string name="order_error">Error while payment!!!</string>
    <string name="order_placed">Balance Added!!!</string>
    <string name="otp_could_not_detcted">OTP could not be detected</string>
    <string name="otp_detected">OTP Detected</string>
    <string name="password_text">Password</string>
    <string name="preferred_options">Please select your preferred option</string>
    <string name="processing">Processing</string>
    <string name="redirect_text">Redirecting you to Payment page.</string>
    <string name="rember">Remember this User ID</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="search_hint_text">Search…</string>
    <string name="search_menu_title">Search</string>
    <string name="searchview_clear_text_content_description">Clear text</string>
    <string name="searchview_navigation_content_description">Back</string>
    <string name="seconds">seconds</string>
    <string name="select_country">Select a country</string>
    <string name="select_option_pay">Submit one of the following options to your bank</string>
    <string name="send_otp">I will Use OTP</string>
    <string name="shopping"> Shopping</string>
    <string name="show">Show</string>
    <string name="side_sheet_accessibility_pane_title">Side Sheet</string>
    <string name="submit">Continue</string>
    <string name="submit_button">Submit</string>
    <string name="submit_otp">Waiting to detect OTP (One Time Password)</string>
    <string name="submit_password">Submit the following to your bank</string>
    <string name="submit_time">Submitting OTP in</string>
    <string name="submitting_otp_auto">Submitting OTP automatically in:</string>
    <string name="tap_to_pause">Tap to Pause</string>
    <string name="tap_to_submit">Tap to Submit OTP</string>
    <string name="terms_and_conditions_link">Terms And Condition</string>
    <string name="title_name">Mega Lotto</string>
    <string name="use_pin">Use Pin</string>
    <string name="username">Save CustomerID</string>
    <string name="verify_mobile_number">Based on the information stored in our database your mobile number is : %s</string>
    <string name="wait_otp">Waiting for OTP from your bank</string>
    <string name="waiting_for_otp_label">Waiting for OTP from %s</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
</resources>
