<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_refer_earn"
            android:checkable="true"
            android:icon="@drawable/ic_refer"
            android:title="@string/menu_refer_earn" />
        <item
            android:id="@+id/menu_support"
            android:checkable="true"
            android:icon="@drawable/ic_support"
            android:title="@string/menu_support" />
        <item
            android:id="@+id/menu_policy"
            android:checkable="true"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/menu_policy" />
        <item
            android:id="@+id/menu_terms"
            android:checkable="true"
            android:icon="@drawable/ic_terms_condition"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/menu_about"
            android:checkable="true"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/menu_contact"
            android:checkable="true"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:checkable="true"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>